apps/bazarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.ramoneees.com`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: wildcard-ramoneees-com-tls
